[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/levels/track/Track.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/main_menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/menus/mp_discover/MultiplayerDiscover.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/music01.ogg" type="AudioStream" id=4]
[ext_resource path="res://scenes/menus/options/Options.tscn" type="PackedScene" id=5]

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="Environement" type="Spatial" parent="."]

[node name="Track" parent="Environement" instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="Environement"]
transform = Transform( -0.857814, -0.132, 0.49672, 0, 0.966457, 0.256829, -0.51396, 0.220312, -0.82904, 267.656, 43.6346, 98.149 )
far = 1000.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameSelection" type="MarginContainer" parent="CanvasLayer"]
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = 291.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameSelection"]
margin_right = 271.0
margin_bottom = 560.0
custom_constants/separation = 30
alignment = 2

[node name="PlayButton" type="Button" parent="CanvasLayer/GameSelection/VBoxContainer"]
margin_top = 310.0
margin_right = 271.0
margin_bottom = 350.0
rect_min_size = Vector2( 0, 40 )
text = "Play"

[node name="MultiplayerButton" type="Button" parent="CanvasLayer/GameSelection/VBoxContainer"]
margin_top = 380.0
margin_right = 271.0
margin_bottom = 420.0
rect_min_size = Vector2( 0, 40 )
text = "Multiplayer"

[node name="OptionsButton" type="Button" parent="CanvasLayer/GameSelection/VBoxContainer"]
margin_top = 450.0
margin_right = 271.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 40 )
text = "Options"

[node name="QuitButton" type="Button" parent="CanvasLayer/GameSelection/VBoxContainer"]
margin_top = 520.0
margin_right = 271.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 40 )
text = "Quit"

[node name="MultiplayerDiscover" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false

[node name="OptionsMenu" type="MarginContainer" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -395.0
margin_top = -231.5
margin_right = 395.0
margin_bottom = 231.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="CanvasLayer/OptionsMenu" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 790.0
margin_bottom = 463.0
enable_close = true
enable_quit_game = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
autoplay = true
bus = "Music"
[connection signal="pressed" from="CanvasLayer/GameSelection/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameSelection/VBoxContainer/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameSelection/VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameSelection/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="exited" from="CanvasLayer/MultiplayerDiscover" to="." method="_on_MultiplayerDiscover_exited"]
[connection signal="lobby_started" from="CanvasLayer/MultiplayerDiscover" to="." method="_on_MultiplayerDiscover_lobby_started"]
[connection signal="closed" from="CanvasLayer/OptionsMenu/Options" to="." method="_on_Options_closed"]
